<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2021. All rights reserved.
  ~ Designed and developed by Francisco Manuel Cámara Saura on 14/04/21 16:49 for the Final Project of the Degree in Computer Engineering of the University of Alicante.
  ~
  ~ File name: pre_login_fragment.xml.
  ~ Last modified: 14/04/21 16:49.
  -->

<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".tfg.fragment.PreLogin">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textAppName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="160dp"
            android:fontFamily="cursive"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textSize="44sp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <LinearLayout
            android:id="@+id/linearLayoutProvince"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="64dp"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@+id/textAppName">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/login_province"
                android:textSize="18sp" />

            <Spinner
                android:id="@+id/provinceSpinner"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:prompt="@string/login_provinces"
                android:spinnerMode="dropdown"
                android:textAlignment="center" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayoutLocation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@+id/linearLayoutProvince">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/login_location"
                android:textSize="18sp" />

            <Spinner
                android:id="@+id/locationsSpinner"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:prompt="@string/login_locations"
                android:spinnerMode="dropdown"
                android:textAlignment="center" />
            </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayoutSchool"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@+id/linearLayoutLocation">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/login_school"
                android:textSize="18sp" />

            <Spinner
                android:id="@+id/schoolsSpinner"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:prompt="@string/login_schools"
                android:spinnerMode="dropdown"
                android:textAlignment="center" />
        </LinearLayout>

        <Button
            android:id="@+id/buttonNext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="64dp"
            android:enabled="false"
            android:text="@string/button_literal_next"
            android:textAlignment="center"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>